--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,3 +121,202 @@ input[name='panel']:checked ~ .accordion__content {
   /* Get this as close to what height you expect */
   max-height: 50em;
 }
+
+
+/**
+  * Here you would add any custom utilities you need that don't come out of the
+  * box with Tailwind.
+  *
+  * Example :
+  *
+  * .bg-pattern-graph-paper { ... }
+  * .skew-45 { ... }
+  *
+  * Or if using a preprocessor or `postcss-import`:
+  *
+  * @import "utilities/background-patterns";
+  * @import "utilities/skew-transforms";
+  */
+
+
+  @media (min-width: 300px) {
+    
+    .px-1 {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+    .px-2 {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+
+    .pt-5 {
+      padding-top: 1rem;
+    }
+
+    .pt-10 {
+      padding-top: 5rem;
+    }
+
+
+    h1 {
+      font-size: 2em;
+      font-weight: 700;
+    }
+
+    
+    h3.small {
+      font-size: 1em;
+      font-weight: 400;
+      background-color: #8785a8;
+      color: #fff;
+      padding-left: 9px;
+      padding-top: 3px;
+      padding-bottom: 3px;
+      border-style: solid;
+      border-radius: 2px;
+    }
+    
+
+    .mx-24 {
+      margin-right: 1em;
+      margin-left: 1em;
+    }
+
+    .px-10 {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+    .px-12 {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+
+
+    .px-20 {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+    .text-2xl {
+      font-size: 1em;
+    }
+
+
+  }
+
+@media (min-width: 576px) {
+
+.px-1 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-2 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.pt-5 {
+  padding-top: 2rem;
+}
+
+.pt-10 {
+  padding-top: 10rem;
+}
+
+
+.py-5 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.mx-24 {
+  margin-right: 2em;
+  margin-left: 2em;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-20 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+
+.text-2xl {
+  font-size: 1.1em;
+}
+
+
+
+}
+
+@media (min-width: 850px) {
+
+  h1 {
+    font-size: 3em;
+    font-family: "objektiv-mk1",sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  h3.small {
+    font-size: 1em;
+    font-weight: 400;
+  }
+  
+  
+  
+  .px-1 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .px-2 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  
+  .pt-5 {
+    padding-top: 2rem;
+  }
+  .pt-10 {
+    padding-top: 10rem;
+  }
+  
+  
+.mx-24 {
+  margin-right: 4em;
+  margin-left: 4em;
+}
+
+.px-10 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-20 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+}
+
+@media (min-width: 992px) {
+
+  .px-2 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+}
